gitops/apps/tapnow/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tapnow-prod
  labels:
    app.kubernetes.io/part-of: tapnow
