gitops/apps/tapnow/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tapnow
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tapnow.lol
      secretName: tapnow-lol-tls
  rules:
    - host: tapnow.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tapnow
                port:
                  name: http
